# example-clang-tidy-check-outoftree

./: AwesomeFunctionNamesCheck.cpp  AwesomeFunctionNamesCheck.h  CMakeLists.txt
